--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   syncfusion_flutter_gauges: ^21.2.4
   primer_progress_bar: ^0.3.0
+  cloud_firestore: ^4.13.6
 
 dev_dependencies:
   flutter_test:
